added back the original content to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>MaizeCode Agave Apps</title>
+	</head>
+	<body>
+		<div id="content"></div>
+		<script src="javascripts/bundle.js"></script>
+	</body>
+</html>
