--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Scientific Apps</title>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	</head>
 	<body>
 		<div id="content"></div>
+		<script type="text/javascript">
+		var _config={
+			setting: {
+				archive_home: '/agave_data',
+				datastore_system: 'data.sciapps.org',
+				host_url: 'http://dev1.sciapps.org',
+				output_url: 'http://data.sciapps.org',
+				upload_suffix: '.upload',
+				wf_step_prefix: 'wf:step:'
+			}
+		};
+		</script>
 		<script src="javascripts/bundle.js"></script>
 	</body>
 </html>
