--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -13,9 +13,9 @@
 				archive_home: '/agave_data',
 				datastore_system: 'data.sciapps.org',
 				host_url: 'http://dev1.sciapps.org',
-				output_url: 'http://data.sciapps.org',
+				output_url: 'http://dev2.sciapps.org',
 				upload_suffix: '.upload',
-				wf_step_prefix: 'wf:step:'
+				wf_step_prefix: 'wf_step_'
 			}
 		};
 		</script>
