--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MaizeCode Agave Apps</title>
+		<title>SciApps</title>
 	</head>
 	<body>
 		<div id="content"></div>
