--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -15,7 +15,9 @@
 				host_url: 'http://dev1.sciapps.org',
 				output_url: {
 					"halcott.cshl.edu" : "http://data.sciapps.org",
-					"brie.cshl.edu" : "http://dev2.sciapps.org"
+					"brie.cshl.edu" : "http://dev2.sciapps.org",
+					"data.sciapps.org" : "http://data.sciapps.org",
+					"dev2.sciapps.org" : "http://dev2.sciapps.org",
 				},
 				upload_suffix: '.upload',
 				wf_step_prefix: 'wf_step_'
