--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -11,6 +11,7 @@
 		var _config={
 			setting: {
 				archive_home: '/agave_data',
+				datastore_path : 'sci_data',
 				datastore_system: 'data.sciapps.org',
 				host_url: 'http://dev1.sciapps.org',
 				output_url: {
