--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -12,7 +12,7 @@
 			setting: {
 				archive_home: '/agave_data',
 				datastore_system: 'data.sciapps.org',
-				host_url: 'http://dev1.sciapps.org',
+				host_url: 'http://de2.sciapps.org',
 				output_url: {
 					"halcott.cshl.edu" : "http://data.sciapps.org",
 					"brie.cshl.edu" : "http://dev2.sciapps.org",
