--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -20,6 +20,28 @@
 					"data.sciapps.org" : "http://data.sciapps.org",
 					"dev2.sciapps.org" : "http://dev2.sciapps.org",
 				},
+				"datastore" : {
+					"__system__" : {
+						"system" : "",
+						"path" : "",
+						"home" : ""
+					},
+					"__user__" : {
+						"system" : "data.iplantcollaborative.org",
+						"path" : "__user__/sci_data",
+						"home" : "/iplant/home"
+					},
+					"__public__" : {
+						"system" : "data.sciapps.org",
+						"path" : "example_data",
+						"home" : "/halcott"
+					},
+					"__shared__" : {
+						"system" : "data.iplantcollaborative.org",
+						"path" : "shared",
+						"home" : "/iplant/home"
+					}
+				},
 				upload_suffix: '.upload',
 				wf_step_prefix: 'wf_step_'
 			}
