--- a/agavedancer/public/index.html
+++ b/agavedancer/public/index.html
@@ -28,7 +28,7 @@
 					},
 					"__CyVerse__" : {
 						"system" : "data.iplantcollaborative.org",
-						"path" : "__user__/sci_data",
+						"path" : "__CyVerse__/sci_data",
 						"home" : "/iplant/home"
 					},
 					"__exampleData__" : {
